--- a/content/lessons/04-delegates-events/02-events.mdx
+++ b/content/lessons/04-delegates-events/02-events.mdx
@@ -1,132 +1,128 @@
 ---
-title: "Events in C#"
-description: "Master events, event handlers, and the publisher-subscriber pattern"
+title: "Events"
+description: "Learn how to implement the observer pattern with C# events"
 order: 2
-difficulty: "intermediate"
-tags: ["events", "event-handlers", "publisher-subscriber", "delegates"]
+difficulty: "advanced"
+tags: ["events", "observer pattern", "EventHandler"]
 duration: "30 minutes"
 ---
 
 # Events in C#
 
-Events are a way for a class to notify other classes when something happens. They're built on top of delegates and follow the publisher-subscriber pattern.
+Events provide a way for a class to notify other classes when something interesting happens. They implement the observer pattern and are built on top of delegates.
 
-## What are Events?
+## What is an Event?
 
-Events enable:
-- **Loose coupling** between components
-- **Publisher-subscriber** pattern
-- **Notification system** for state changes
-- **GUI programming** (button clicks, etc.)
+An event is a special type of delegate that:
+- Can only be invoked from within the class that declares it
+- External classes can only subscribe (+= ) or unsubscribe (-=)
+- Provides loose coupling between publishers and subscribers
+
+## Basic Event Syntax
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 
-// Publisher class
 class Button
 {
     // Declare an event using EventHandler delegate
     public event EventHandler Clicked;
     
-    public void Click()
+    public string Text { get; set; }
+    
+    public Button(string text)
     {
-        Console.WriteLine("Button was clicked!");
-        // Raise the event
-        OnClicked();
+        Text = text;
     }
     
-    // Protected method to raise the event
-    protected virtual void OnClicked()
+    // Method to raise the event
+    public void Click()
     {
-        // Check if anyone is subscribed
-        if (Clicked != null)
-        {
-            Clicked(this, EventArgs.Empty);
-        }
-        // Shorter syntax (C# 6+):
-        // Clicked?.Invoke(this, EventArgs.Empty);
+        Console.WriteLine($"Button '{Text}' was clicked");
+        
+        // Raise the event (null check is important!)
+        Clicked?.Invoke(this, EventArgs.Empty);
     }
 }
 
-// Subscriber class
 class Program
 {
     static void Main()
     {
-        Button button = new Button();
+        Button button = new Button("Submit");
         
         // Subscribe to the event
-        button.Clicked += Button_Clicked;
-        button.Clicked += AnotherHandler;
+        button.Clicked += OnButtonClicked;
+        button.Clicked += OnButtonClickedAgain;
         
-        // Trigger the event
+        // Simulate clicks
         button.Click();
         
-        Console.WriteLine("\\nUnsubscribing one handler...");
-        button.Clicked -= AnotherHandler;
+        Console.WriteLine("\\n--- Unsubscribing one handler ---");
+        button.Clicked -= OnButtonClickedAgain;
         
         button.Click();
     }
     
-    static void Button_Clicked(object sender, EventArgs e)
+    static void OnButtonClicked(object sender, EventArgs e)
     {
-        Console.WriteLine("Button_Clicked handler executed");
+        Button btn = (Button)sender;
+        Console.WriteLine($"  Handler 1: '{btn.Text}' button processed");
     }
     
-    static void AnotherHandler(object sender, EventArgs e)
+    static void OnButtonClickedAgain(object sender, EventArgs e)
     {
-        Console.WriteLine("AnotherHandler executed");
+        Console.WriteLine("  Handler 2: Click logged");
     }
 }`}
-  title="Basic Event Example"
 />
 
 ## Custom Event Arguments
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 
-// Custom EventArgs class
-class PriceChangedEventArgs : EventArgs
+// Custom event arguments
+class TemperatureChangedEventArgs : EventArgs
 {
-    public decimal OldPrice { get; set; }
-    public decimal NewPrice { get; set; }
-    public decimal Change => NewPrice - OldPrice;
-    public decimal PercentageChange => (Change / OldPrice) * 100;
+    public double OldTemperature { get; }
+    public double NewTemperature { get; }
+    public DateTime ChangeTime { get; }
+    
+    public TemperatureChangedEventArgs(double oldTemp, double newTemp)
+    {
+        OldTemperature = oldTemp;
+        NewTemperature = newTemp;
+        ChangeTime = DateTime.Now;
+    }
+    
+    public double Difference => NewTemperature - OldTemperature;
 }
 
-class Product
+class Thermostat
 {
-    private decimal price;
+    private double temperature;
     
-    public string Name { get; set; }
+    // Event with custom args
+    public event EventHandler<TemperatureChangedEventArgs> TemperatureChanged;
     
-    public decimal Price
+    public double Temperature
     {
-        get => price;
+        get => temperature;
         set
         {
-            if (price != value)
+            if (value != temperature)
             {
-                decimal oldPrice = price;
-                price = value;
-                OnPriceChanged(new PriceChangedEventArgs 
-                { 
-                    OldPrice = oldPrice, 
-                    NewPrice = value 
-                });
+                var args = new TemperatureChangedEventArgs(temperature, value);
+                temperature = value;
+                OnTemperatureChanged(args);
             }
         }
     }
     
-    // Event with custom EventArgs
-    public event EventHandler<PriceChangedEventArgs> PriceChanged;
-    
-    protected virtual void OnPriceChanged(PriceChangedEventArgs e)
+    protected virtual void OnTemperatureChanged(TemperatureChangedEventArgs e)
     {
-        PriceChanged?.Invoke(this, e);
+        TemperatureChanged?.Invoke(this, e);
     }
 }
 
@@ -134,128 +130,104 @@ class Program
 {
     static void Main()
     {
-        Product product = new Product 
-        { 
-            Name = "Laptop", 
-            Price = 1000 
+        Thermostat thermostat = new Thermostat();
+        
+        // Subscribe with lambda
+        thermostat.TemperatureChanged += (sender, e) =>
+        {
+            Console.WriteLine($"Temperature changed from {e.OldTemperature}°C to {e.NewTemperature}°C");
+            Console.WriteLine($"  Change: {e.Difference:+0.0;-0.0}°C at {e.ChangeTime:HH:mm:ss}");
         };
         
-        // Subscribe to event
-        product.PriceChanged += Product_PriceChanged;
-        product.PriceChanged += NotifyCustomers;
+        // Subscribe with method
+        thermostat.TemperatureChanged += CheckForAlarm;
         
-        Console.WriteLine($"Initial price: \${product.Price}\\n");
-        
-        // Change price (triggers event)
-        product.Price = 899.99m;
-        
-        product.Price = 950m;
+        // Change temperature
+        thermostat.Temperature = 20;
+        thermostat.Temperature = 25;
+        thermostat.Temperature = 35;  // Triggers alarm
+        thermostat.Temperature = 15;
     }
     
-    static void Product_PriceChanged(object sender, PriceChangedEventArgs e)
+    static void CheckForAlarm(object sender, TemperatureChangedEventArgs e)
     {
-        Product product = sender as Product;
-        Console.WriteLine($"Price changed for {product.Name}:");
-        Console.WriteLine($"  Old: \${e.OldPrice}");
-        Console.WriteLine($"  New: \${e.NewPrice}");
-        Console.WriteLine($"  Change: \${e.Change:F2} ({e.PercentageChange:F1}%)\\n");
-    }
-    
-    static void NotifyCustomers(object sender, PriceChangedEventArgs e)
-    {
-        Console.WriteLine("📧 Notifying customers about price change...\\n");
-    }
-}`}
-  title="Custom Event Arguments"
-/>
-
-## Real-World Example: Stock Market
-
-<CodeEditor 
-  language="csharp"
-  code={`using System;
-using System.Collections.Generic;
-
-class StockEventArgs : EventArgs
-{
-    public string Symbol { get; set; }
-    public decimal Price { get; set; }
-    public decimal Change { get; set; }
-}
-
-class Stock
-{
-    private decimal price;
-    
-    public string Symbol { get; set; }
-    public decimal Price
-    {
-        get => price;
-        set
+        if (e.NewTemperature > 30)
         {
-            decimal oldPrice = price;
-            price = value;
-            decimal change = value - oldPrice;
-            
-            if (Math.Abs(change) > 0)
-            {
-                OnPriceChanged(new StockEventArgs 
-                { 
-                    Symbol = Symbol, 
-                    Price = value, 
-                    Change = change 
-                });
-                
-                // Trigger alert if big change
-                if (Math.Abs(change / oldPrice) > 0.05m)
-                {
-                    OnPriceAlert(new StockEventArgs 
-                    { 
-                        Symbol = Symbol, 
-                        Price = value, 
-                        Change = change 
-                    });
-                }
-            }
+            Console.WriteLine("  *** ALARM: Temperature too high! ***");
+        }
+        else if (e.NewTemperature < 18)
+        {
+            Console.WriteLine("  *** ALARM: Temperature too low! ***");
         }
     }
+}`}
+/>
+
+## Standard Event Pattern
+
+<CodeEditor 
+  initialCode={`using System;
+
+// Standard event argument class
+class OrderEventArgs : EventArgs
+{
+    public int OrderId { get; }
+    public string CustomerName { get; }
+    public decimal Total { get; }
     
-    public event EventHandler<StockEventArgs> PriceChanged;
-    public event EventHandler<StockEventArgs> PriceAlert;
-    
-    protected virtual void OnPriceChanged(StockEventArgs e)
+    public OrderEventArgs(int id, string customer, decimal total)
     {
-        PriceChanged?.Invoke(this, e);
-    }
-    
-    protected virtual void OnPriceAlert(StockEventArgs e)
-    {
-        PriceAlert?.Invoke(this, e);
+        OrderId = id;
+        CustomerName = customer;
+        Total = total;
     }
 }
 
-class Portfolio
+class OrderProcessor
 {
-    private List<Stock> stocks = new List<Stock>();
+    // Standard events following .NET conventions
+    public event EventHandler<OrderEventArgs> OrderReceived;
+    public event EventHandler<OrderEventArgs> OrderProcessing;
+    public event EventHandler<OrderEventArgs> OrderCompleted;
+    public event EventHandler<OrderEventArgs> OrderFailed;
     
-    public void AddStock(Stock stock)
+    // Protected virtual method pattern for raising events
+    protected virtual void OnOrderReceived(OrderEventArgs e)
     {
-        stocks.Add(stock);
-        stock.PriceChanged += Stock_PriceChanged;
-        stock.PriceAlert += Stock_PriceAlert;
-        Console.WriteLine($"Added {stock.Symbol} to portfolio");
+        OrderReceived?.Invoke(this, e);
     }
     
-    private void Stock_PriceChanged(object sender, StockEventArgs e)
+    protected virtual void OnOrderProcessing(OrderEventArgs e)
     {
-        string direction = e.Change > 0 ? "▲" : "▼";
-        Console.WriteLine($"{e.Symbol}: \${e.Price} {direction} \${Math.Abs(e.Change):F2}");
+        OrderProcessing?.Invoke(this, e);
     }
     
-    private void Stock_PriceAlert(object sender, StockEventArgs e)
+    protected virtual void OnOrderCompleted(OrderEventArgs e)
     {
-        string alertType = e.Change > 0 ? "SPIKE" : "DROP";
-        Console.WriteLine($"⚠️  ALERT: {e.Symbol} {alertType} - Now \${e.Price}");
+        OrderCompleted?.Invoke(this, e);
+    }
+    
+    protected virtual void OnOrderFailed(OrderEventArgs e)
+    {
+        OrderFailed?.Invoke(this, e);
+    }
+    
+    public void ProcessOrder(int orderId, string customer, decimal total)
+    {
+        var args = new OrderEventArgs(orderId, customer, total);
+        
+        OnOrderReceived(args);
+        OnOrderProcessing(args);
+        
+        // Simulate processing (90% success)
+        if (new Random().Next(10) > 0)
+        {
+            OnOrderCompleted(args);
+        }
+        else
+        {
+            OnOrderFailed(args);
+        }
     }
 }
 
@@ -263,66 +235,70 @@ class Program
 {
     static void Main()
     {
-        Portfolio portfolio = new Portfolio();
+        OrderProcessor processor = new OrderProcessor();
         
-        Stock apple = new Stock { Symbol = "AAPL", Price = 150 };
-        Stock google = new Stock { Symbol = "GOOGL", Price = 2800 };
+        // Subscribe to events
+        processor.OrderReceived += (s, e) => 
+            Console.WriteLine($"[Received] Order #{e.OrderId} from {e.CustomerName}");
         
-        portfolio.AddStock(apple);
-        portfolio.AddStock(google);
+        processor.OrderProcessing += (s, e) =>
+            Console.WriteLine($"[Processing] Order #{e.OrderId} - \\${'{'}e.Total{'}'}");
         
-        Console.WriteLine("\\nSimulating price changes...\\n");
+        processor.OrderCompleted += (s, e) => 
+            Console.WriteLine($"[Completed] Order #{e.OrderId} ✓");
         
-        apple.Price = 152;
-        google.Price = 2850;
-        apple.Price = 145;  // Big drop - triggers alert
-        google.Price = 2950;  // Big spike - triggers alert
+        processor.OrderFailed += (s, e) => 
+            Console.WriteLine($"[Failed] Order #{e.OrderId} ✗");
+        
+        // Process some orders
+        for (int i = 1; i <= 3; i++)
+        {
+            Console.WriteLine($"\\n--- Processing Order {i} ---");
+            processor.ProcessOrder(i, $"Customer {i}", 99.99m * i);
+        }
     }
 }`}
-  title="Stock Market System"
 />
 
 ## Event Accessors
 
+Custom add/remove logic for events:
+
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 using System.Collections.Generic;
 
-class VideoPlayer
+class SecureEventPublisher
 {
-    private EventHandler playing;
-    private List<string> eventLog = new List<string>();
+    private List<EventHandler> handlers = new List<EventHandler>();
+    private const int MaxSubscribers = 3;
     
-    // Event with custom add/remove accessors
-    public event EventHandler Playing
+    // Custom event accessors
+    public event EventHandler DataReceived
     {
         add
         {
-            Console.WriteLine("Subscriber added to Playing event");
-            eventLog.Add($"Subscribed: {value.Method.Name}");
-            playing += value;
+            if (handlers.Count >= MaxSubscribers)
+            {
+                Console.WriteLine($"Cannot add handler: max {MaxSubscribers} subscribers reached");
+                return;
+            }
+            handlers.Add(value);
+            Console.WriteLine($"Handler added. Total: {handlers.Count}");
         }
         remove
         {
-            Console.WriteLine("Subscriber removed from Playing event");
-            eventLog.Add($"Unsubscribed: {value.Method.Name}");
-            playing -= value;
+            handlers.Remove(value);
+            Console.WriteLine($"Handler removed. Total: {handlers.Count}");
         }
     }
     
-    public void Play()
+    public void SimulateDataReceived()
     {
-        Console.WriteLine("\\n▶️  Playing video...");
-        playing?.Invoke(this, EventArgs.Empty);
-    }
-    
-    public void ShowLog()
-    {
-        Console.WriteLine("\\nEvent Log:");
-        foreach (var entry in eventLog)
+        Console.WriteLine("\\nData received! Notifying subscribers...");
+        foreach (var handler in handlers)
         {
-            Console.WriteLine($"  - {entry}");
+            handler?.Invoke(this, EventArgs.Empty);
         }
     }
 }
@@ -331,141 +307,361 @@ class Program
 {
     static void Main()
     {
-        VideoPlayer player = new VideoPlayer();
+        SecureEventPublisher publisher = new SecureEventPublisher();
         
-        player.Playing += HandlePlaying;
-        player.Playing += LogPlaying;
+        EventHandler handler1 = (s, e) => Console.WriteLine("  Handler 1 executed");
+        EventHandler handler2 = (s, e) => Console.WriteLine("  Handler 2 executed");
+        EventHandler handler3 = (s, e) => Console.WriteLine("  Handler 3 executed");
+        EventHandler handler4 = (s, e) => Console.WriteLine("  Handler 4 executed");
         
-        player.Play();
+        // Subscribe
+        publisher.DataReceived += handler1;
+        publisher.DataReceived += handler2;
+        publisher.DataReceived += handler3;
+        publisher.DataReceived += handler4;  // Should fail
         
-        player.Playing -= LogPlaying;
+        publisher.SimulateDataReceived();
         
-        player.Play();
+        // Unsubscribe one
+        publisher.DataReceived -= handler2;
         
-        player.ShowLog();
-    }
-    
-    static void HandlePlaying(object sender, EventArgs e)
-    {
-        Console.WriteLine("HandlePlaying: Video is playing");
-    }
-    
-    static void LogPlaying(object sender, EventArgs e)
-    {
-        Console.WriteLine("LogPlaying: Logged video play event");
+        // Now we can add handler4
+        publisher.DataReceived += handler4;
+        
+        publisher.SimulateDataReceived();
     }
 }`}
-  title="Event Accessors"
 />
 
-## Anonymous Methods and Lambdas with Events
+## Observer Pattern Implementation
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
+using System.Collections.Generic;
 
-class Timer
+// Subject (Publisher)
+class StockMarket
 {
-    public event EventHandler Tick;
-    public event EventHandler<int> SecondPassed;
+    private Dictionary<string, decimal> stocks = new Dictionary<string, decimal>();
     
-    public void Start(int seconds)
+    public event EventHandler<StockChangedEventArgs> StockPriceChanged;
+    
+    public void UpdateStock(string symbol, decimal newPrice)
     {
-        for (int i = 1; i <= seconds; i++)
+        decimal oldPrice = stocks.ContainsKey(symbol) ? stocks[symbol] : 0;
+        stocks[symbol] = newPrice;
+        
+        StockPriceChanged?.Invoke(this, new StockChangedEventArgs(symbol, oldPrice, newPrice));
+    }
+}
+
+class StockChangedEventArgs : EventArgs
+{
+    public string Symbol { get; }
+    public decimal OldPrice { get; }
+    public decimal NewPrice { get; }
+    public decimal Change => NewPrice - OldPrice;
+    public decimal ChangePercent => OldPrice > 0 ? (Change / OldPrice) * 100 : 0;
+    
+    public StockChangedEventArgs(string symbol, decimal oldPrice, decimal newPrice)
+    {
+        Symbol = symbol;
+        OldPrice = oldPrice;
+        NewPrice = newPrice;
+    }
+}
+
+// Observer 1: Price Display
+class PriceDisplay
+{
+    public void OnStockChanged(object sender, StockChangedEventArgs e)
+    {
+        string direction = e.Change >= 0 ? "↑" : "↓";
+        Console.WriteLine($"[Display] {e.Symbol}: \\${'{'}e.NewPrice:F2{'}'} {direction} ({e.ChangePercent:+0.00;-0.00}%)");
+    }
+}
+
+// Observer 2: Alert System
+class AlertSystem
+{
+    private decimal threshold;
+    
+    public AlertSystem(decimal alertThreshold)
+    {
+        threshold = alertThreshold;
+    }
+    
+    public void OnStockChanged(object sender, StockChangedEventArgs e)
+    {
+        if (Math.Abs(e.ChangePercent) > threshold)
         {
-            Console.WriteLine($"Second: {i}");
-            SecondPassed?.Invoke(this, i);
-            
-            if (i == seconds)
+            Console.WriteLine($"[ALERT] {e.Symbol} moved {e.ChangePercent:0.00}% - exceeds {threshold}% threshold!");
+        }
+    }
+}
+
+// Observer 3: Trade Bot
+class TradeBot
+{
+    public void OnStockChanged(object sender, StockChangedEventArgs e)
+    {
+        if (e.ChangePercent < -5)
+        {
+            Console.WriteLine($"[Bot] Buying {e.Symbol} - price dropped significantly");
+        }
+        else if (e.ChangePercent > 5)
+        {
+            Console.WriteLine($"[Bot] Selling {e.Symbol} - taking profits");
+        }
+    }
+}
+
+class Program
+{
+    static void Main()
+    {
+        StockMarket market = new StockMarket();
+        
+        // Create observers
+        PriceDisplay display = new PriceDisplay();
+        AlertSystem alerts = new AlertSystem(3);
+        TradeBot bot = new TradeBot();
+        
+        // Subscribe
+        market.StockPriceChanged += display.OnStockChanged;
+        market.StockPriceChanged += alerts.OnStockChanged;
+        market.StockPriceChanged += bot.OnStockChanged;
+        
+        // Simulate market updates
+        Console.WriteLine("=== Market Open ===\\n");
+        market.UpdateStock("AAPL", 150.00m);
+        market.UpdateStock("GOOGL", 2800.00m);
+        market.UpdateStock("MSFT", 300.00m);
+        
+        Console.WriteLine("\\n=== Price Updates ===\\n");
+        market.UpdateStock("AAPL", 155.00m);  // +3.33%
+        market.UpdateStock("GOOGL", 2700.00m);  // -3.57%
+        market.UpdateStock("MSFT", 280.00m);  // -6.67%
+    }
+}`}
+/>
+
+## UI Event Handling Example
+
+<CodeEditor 
+  initialCode={`using System;
+
+// UI Components with events
+class TextBox
+{
+    private string text = "";
+    
+    public event EventHandler<TextChangedEventArgs> TextChanged;
+    
+    public string Text
+    {
+        get => text;
+        set
+        {
+            if (text != value)
             {
-                Tick?.Invoke(this, EventArgs.Empty);
+                string oldText = text;
+                text = value;
+                TextChanged?.Invoke(this, new TextChangedEventArgs(oldText, value));
             }
         }
     }
 }
 
+class TextChangedEventArgs : EventArgs
+{
+    public string OldText { get; }
+    public string NewText { get; }
+    
+    public TextChangedEventArgs(string oldText, string newText)
+    {
+        OldText = oldText;
+        NewText = newText;
+    }
+}
+
+class Form
+{
+    public TextBox UsernameBox { get; } = new TextBox();
+    public TextBox PasswordBox { get; } = new TextBox();
+    
+    private bool isValid = false;
+    
+    public Form()
+    {
+        // Wire up event handlers
+        UsernameBox.TextChanged += OnFieldChanged;
+        PasswordBox.TextChanged += OnFieldChanged;
+    }
+    
+    private void OnFieldChanged(object sender, TextChangedEventArgs e)
+    {
+        Console.WriteLine($"Field changed: '{e.OldText}' -> '{e.NewText}'");
+        ValidateForm();
+    }
+    
+    private void ValidateForm()
+    {
+        bool wasValid = isValid;
+        isValid = UsernameBox.Text.Length >= 3 && PasswordBox.Text.Length >= 6;
+        
+        if (isValid != wasValid)
+        {
+            Console.WriteLine($"Form validity changed: {isValid}");
+        }
+    }
+    
+    public void Submit()
+    {
+        if (isValid)
+        {
+            Console.WriteLine($"\\nSubmitting form...");
+            Console.WriteLine($"Username: {UsernameBox.Text}");
+            Console.WriteLine($"Password: {"*".PadLeft(PasswordBox.Text.Length, '*')}");
+        }
+        else
+        {
+            Console.WriteLine("\\nCannot submit - form is invalid!");
+        }
+    }
+}
+
 class Program
 {
     static void Main()
     {
-        Timer timer = new Timer();
+        Form loginForm = new Form();
         
-        // Subscribe with lambda expression
-        timer.SecondPassed += (sender, second) => 
-        {
-            if (second % 2 == 0)
-                Console.WriteLine($"  -> Even second: {second}");
-        };
+        Console.WriteLine("=== Filling Form ===\\n");
         
-        // Another lambda subscriber
-        timer.SecondPassed += (sender, second) =>
-        {
-            if (second == 3)
-                Console.WriteLine("  -> Halfway there!");
-        };
+        loginForm.UsernameBox.Text = "jo";  // Too short
+        loginForm.Submit();
         
-        // Subscribe to Tick event
-        timer.Tick += (sender, e) => 
-        {
-            Console.WriteLine("\\n✓ Timer completed!");
-        };
+        loginForm.UsernameBox.Text = "john";  // Valid length
+        loginForm.PasswordBox.Text = "123";   // Too short
+        loginForm.Submit();
         
-        Console.WriteLine("Starting 5-second timer:\\n");
-        timer.Start(5);
+        loginForm.PasswordBox.Text = "secretpass";  // Valid
+        loginForm.Submit();
     }
 }`}
-  title="Events with Lambda Expressions"
 />
 
-## Publisher-Subscriber Pattern
+## Complete Example: Game Events
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 
-class NewsAgency
+// Event arguments
+class PlayerEventArgs : EventArgs
 {
-    private string latestNews;
+    public string PlayerName { get; }
+    public int Value { get; }
     
-    public event EventHandler<string> NewsPublished;
-    
-    public void PublishNews(string news)
+    public PlayerEventArgs(string name, int value = 0)
     {
-        latestNews = news;
-        Console.WriteLine($"\\n📰 Publishing: {news}");
-        OnNewsPublished(news);
-    }
-    
-    protected virtual void OnNewsPublished(string news)
-    {
-        NewsPublished?.Invoke(this, news);
+        PlayerName = name;
+        Value = value;
     }
 }
 
-class NewsSubscriber
+// Game with events
+class Game
 {
-    private string name;
+    public event EventHandler GameStarted;
+    public event EventHandler GameEnded;
+    public event EventHandler<PlayerEventArgs> PlayerScored;
+    public event EventHandler<PlayerEventArgs> PlayerDied;
+    public event EventHandler<PlayerEventArgs> LevelCompleted;
     
-    public NewsSubscriber(string name)
+    private string currentPlayer;
+    private int score;
+    private int level = 1;
+    private int lives = 3;
+    
+    public void Start(string playerName)
     {
-        this.name = name;
+        currentPlayer = playerName;
+        score = 0;
+        level = 1;
+        lives = 3;
+        
+        Console.WriteLine($"\\n{'=',-40}");
+        GameStarted?.Invoke(this, EventArgs.Empty);
     }
     
-    public void Subscribe(NewsAgency agency)
+    public void AddScore(int points)
     {
-        agency.NewsPublished += ReceiveNews;
-        Console.WriteLine($"{name} subscribed to news");
+        score += points;
+        PlayerScored?.Invoke(this, new PlayerEventArgs(currentPlayer, points));
+        
+        if (score >= level * 100)
+        {
+            level++;
+            LevelCompleted?.Invoke(this, new PlayerEventArgs(currentPlayer, level));
+        }
     }
     
-    public void Unsubscribe(NewsAgency agency)
+    public void TakeDamage()
     {
-        agency.NewsPublished -= ReceiveNews;
-        Console.WriteLine($"{name} unsubscribed from news");
+        lives--;
+        if (lives <= 0)
+        {
+            PlayerDied?.Invoke(this, new PlayerEventArgs(currentPlayer, score));
+            End();
+        }
     }
     
-    private void ReceiveNews(object sender, string news)
+    public void End()
     {
-        Console.WriteLine($"  📱 {name} received: {news}");
+        GameEnded?.Invoke(this, EventArgs.Empty);
+    }
+}
+
+// UI that responds to events
+class GameUI
+{
+    public void Subscribe(Game game)
+    {
+        game.GameStarted += (s, e) => Console.WriteLine("[UI] Game Started! Good luck!");
+        game.GameEnded += (s, e) => Console.WriteLine("[UI] Game Over!");
+        game.PlayerScored += (s, e) => Console.WriteLine($"[UI] {e.PlayerName} scored {e.Value} points!");
+        game.PlayerDied += (s, e) => Console.WriteLine($"[UI] {e.PlayerName} died with {e.Value} points");
+        game.LevelCompleted += (s, e) => Console.WriteLine($"[UI] *** LEVEL {e.Value} ***");
+    }
+}
+
+// Sound system that responds to events
+class SoundSystem
+{
+    public void Subscribe(Game game)
+    {
+        game.GameStarted += (s, e) => Console.WriteLine("[Sound] ♪ Playing intro music");
+        game.PlayerScored += (s, e) => Console.WriteLine("[Sound] ♪ Ding!");
+        game.PlayerDied += (s, e) => Console.WriteLine("[Sound] ♪ Sad trombone");
+        game.LevelCompleted += (s, e) => Console.WriteLine("[Sound] ♪ Level up fanfare!");
+    }
+}
+
+// Analytics that tracks events
+class Analytics
+{
+    private int totalScore = 0;
+    private int deaths = 0;
+    
+    public void Subscribe(Game game)
+    {
+        game.PlayerScored += (s, e) => totalScore += e.Value;
+        game.PlayerDied += (s, e) => deaths++;
+        game.GameEnded += (s, e) => 
+        {
+            Console.WriteLine($"[Analytics] Session stats: Score={totalScore}, Deaths={deaths}");
+        };
     }
 }
 
@@ -473,47 +669,48 @@ class Program
 {
     static void Main()
     {
-        NewsAgency cnn = new NewsAgency();
+        Game game = new Game();
         
-        NewsSubscriber alice = new NewsSubscriber("Alice");
-        NewsSubscriber bob = new NewsSubscriber("Bob");
-        NewsSubscriber charlie = new NewsSubscriber("Charlie");
+        // Subscribe systems
+        GameUI ui = new GameUI();
+        SoundSystem sound = new SoundSystem();
+        Analytics analytics = new Analytics();
         
-        alice.Subscribe(cnn);
-        bob.Subscribe(cnn);
+        ui.Subscribe(game);
+        sound.Subscribe(game);
+        analytics.Subscribe(game);
         
-        cnn.PublishNews("Breaking: Technology advances!");
+        // Play the game
+        game.Start("Player1");
         
-        charlie.Subscribe(cnn);
+        game.AddScore(50);
+        game.AddScore(60);  // Level up!
+        game.AddScore(30);
         
-        cnn.PublishNews("Update: New C# version released");
-        
-        bob.Unsubscribe(cnn);
-        
-        cnn.PublishNews("Final: Event handling mastered!");
+        game.TakeDamage();
+        game.TakeDamage();
+        game.TakeDamage();  // Dies
     }
 }`}
-  title="Publisher-Subscriber Pattern"
 />
-
-## Best Practices
-
-1. **Use `EventHandler<T>`** - Standard pattern for custom events
-2. **Check for null** - Always use `?.Invoke()` or null check
-3. **Protected virtual On methods** - For raising events
-4. **Unsubscribe when done** - Prevent memory leaks
-5. **Don't return values** - Events should be void
-6. **Name events as verbs/states** - Clicked, Changed, Closing
 
 ## Key Takeaways
 
-- **Events** enable loose coupling through publisher-subscriber pattern
-- Built on **delegates** with += and -= operators
-- Use **`EventHandler<T>`** for custom event arguments
-- Always **check for null** before raising events
-- Events are one-way communication from publisher to subscribers
-- Essential for **GUI programming** and **asynchronous patterns**
+- **Events** are special delegates that can only be raised from within the class
+- Use **EventHandler** or **EventHandler<T>** for standard events
+- Create **custom EventArgs** to pass data with events
+- Events implement the **observer pattern**
+- Subscribers can **add (+= )** and **remove (-=)** handlers
+- Always check for **null** before invoking events
+
+## Best Practices
+
+1. **Follow naming conventions**: Event names should be verbs (Clicked, Changed)
+2. **Use EventArgs pattern**: Create custom EventArgs for event data
+3. **Provide OnEventName methods**: Protected virtual methods for raising events
+4. **Check for null**: Use `?.Invoke()` or null check before raising
+5. **Unsubscribe when done**: Prevent memory leaks by removing handlers
 
 ## Next Steps
 
-Next: **Lambda Expressions** - write concise inline functions!
+Next lesson: **Lambda Expressions** - Write inline functions for cleaner code!
