--- a/content/lessons/04-delegates-events/03-lambda-expressions.mdx
+++ b/content/lessons/04-delegates-events/03-lambda-expressions.mdx
@@ -1,158 +1,304 @@
 ---
 title: "Lambda Expressions"
-description: "Master lambda expressions, closures, and functional programming in C#"
+description: "Learn how to write concise inline functions with lambda expressions"
 order: 3
-difficulty: "intermediate"
-tags: ["lambda", "functional-programming", "linq", "delegates"]
+difficulty: "advanced"
+tags: ["lambda", "anonymous functions", "LINQ", "functional"]
 duration: "25 minutes"
 ---
 
-# Lambda Expressions
+# Lambda Expressions in C#
 
-Lambda expressions provide a concise way to write anonymous methods. They're essential for LINQ, events, and functional programming in C#.
+Lambda expressions provide a concise way to write anonymous methods. They're essential for LINQ, event handlers, and functional programming in C#.
 
-## Lambda Syntax
+## What is a Lambda Expression?
 
-Basic syntax: `(parameters) => expression`
+A lambda expression is an anonymous function that can contain expressions and statements. It uses the `=>` operator (called "goes to" or "arrow").
+
+## Basic Lambda Syntax
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
-using System.Collections.Generic;
-using System.Linq;
+  initialCode={`using System;
 
 class Program
 {
     static void Main()
     {
-        // Expression lambda - single expression
+        // Expression lambda: (parameters) => expression
         Func<int, int> square = x => x * x;
+        Func<int, int> cube = x => x * x * x;
+        
         Console.WriteLine($"Square of 5: {square(5)}");
+        Console.WriteLine($"Cube of 5: {cube(5)}");
         
-        // Lambda with multiple parameters
-        Func<int, int, int> add = (x, y) => x + y;
-        Console.WriteLine($"5 + 3 = {add(5, 3)}");
+        // Multiple parameters
+        Func<int, int, int> add = (a, b) => a + b;
+        Func<int, int, int> multiply = (a, b) => a * b;
         
-        // Lambda with no parameters
-        Func<string> getMessage = () => "Hello, Lambda!";
-        Console.WriteLine(getMessage());
+        Console.WriteLine($"3 + 4 = {add(3, 4)}");
+        Console.WriteLine($"3 * 4 = {multiply(3, 4)}");
         
-        // Statement lambda - multiple statements
-        Func<int, string> describe = n =>
+        // No parameters
+        Func<int> getRandomNumber = () => new Random().Next(100);
+        Console.WriteLine($"Random: {getRandomNumber()}");
+        
+        // Statement lambda: (parameters) => { statements }
+        Action<string> greet = name =>
         {
-            if (n < 0) return "negative";
-            if (n == 0) return "zero";
-            return "positive";
+            string greeting = $"Hello, {name}!";
+            Console.WriteLine(greeting);
         };
-        Console.WriteLine($"5 is {describe(5)}");
-        Console.WriteLine($"-3 is {describe(-3)}");
+        
+        greet("World");
     }
 }`}
-  title="Lambda Syntax Basics"
 />
 
-## Lambdas with Collections
+## Lambda with Different Delegate Types
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
-using System.Collections.Generic;
+  initialCode={`using System;
+
+class Program
+{
+    static void Main()
+    {
+        // Action - no return value
+        Action sayHi = () => Console.WriteLine("Hi!");
+        Action<string> greet = name => Console.WriteLine($"Hello, {name}!");
+        Action<string, int> repeat = (msg, times) =>
+        {
+            for (int i = 0; i < times; i++)
+                Console.WriteLine(msg);
+        };
+        
+        Console.WriteLine("=== Action ===");
+        sayHi();
+        greet("Alice");
+        repeat("Echo!", 3);
+        
+        // Func - has return value
+        Func<int> getRandom = () => new Random().Next(100);
+        Func<int, bool> isEven = n => n % 2 == 0;
+        Func<string, string> toUpper = s => s.ToUpper();
+        Func<int, int, double> average = (a, b) => (a + b) / 2.0;
+        
+        Console.WriteLine("\\n=== Func ===");
+        Console.WriteLine($"Random: {getRandom()}");
+        Console.WriteLine($"Is 4 even? {isEven(4)}");
+        Console.WriteLine($"Upper: {toUpper("hello")}");
+        Console.WriteLine($"Average of 5,7: {average(5, 7)}");
+        
+        // Predicate - returns bool
+        Predicate<int> isPositive = x => x > 0;
+        Predicate<string> isEmpty = s => string.IsNullOrEmpty(s);
+        
+        Console.WriteLine("\\n=== Predicate ===");
+        Console.WriteLine($"Is 5 positive? {isPositive(5)}");
+        Console.WriteLine($"Is '' empty? {isEmpty("")}");
+    }
+}`}
+/>
+
+## Lambda with LINQ
+
+<CodeEditor 
+  initialCode={`using System;
 using System.Linq;
-
-class Program
-{
-    static void Main()
-    {
-        List<int> numbers = new List<int> { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
-        
-        // Filter with Where
-        var evens = numbers.Where(n => n % 2 == 0);
-        Console.WriteLine("Even numbers: " + string.Join(", ", evens));
-        
-        // Transform with Select
-        var squares = numbers.Select(n => n * n);
-        Console.WriteLine("Squares: " + string.Join(", ", squares));
-        
-        // Multiple operations
-        var result = numbers
-            .Where(n => n > 3)
-            .Select(n => n * 2)
-            .OrderByDescending(n => n);
-        Console.WriteLine("Filtered, doubled, sorted: " + string.Join(", ", result));
-        
-        // Find first match
-        var firstLarge = numbers.FirstOrDefault(n => n > 5);
-        Console.WriteLine($"\\nFirst number > 5: {firstLarge}");
-        
-        // Check conditions
-        bool hasNegative = numbers.Any(n => n < 0);
-        bool allPositive = numbers.All(n => n > 0);
-        Console.WriteLine($"Has negative: {hasNegative}");
-        Console.WriteLine($"All positive: {allPositive}");
-    }
-}`}
-  title="Lambdas with LINQ"
-/>
-
-## Capturing Variables (Closures)
-
-<CodeEditor 
-  language="csharp"
-  code={`using System;
 using System.Collections.Generic;
 
 class Program
 {
     static void Main()
     {
-        // Lambda captures outer variable
-        int factor = 10;
-        Func<int, int> multiply = x => x * factor;
+        var numbers = new List<int> { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
         
-        Console.WriteLine($"5 * {factor} = {multiply(5)}");
+        Console.WriteLine($"Numbers: {string.Join(", ", numbers)}");
         
-        // Change captured variable
-        factor = 20;
-        Console.WriteLine($"5 * {factor} = {multiply(5)}");
+        // Where - filter
+        var evens = numbers.Where(n => n % 2 == 0);
+        Console.WriteLine($"Evens: {string.Join(", ", evens)}");
         
-        // Creating multiple lambdas that capture variables
-        List<Func<int>> functions = new List<Func<int>>();
+        // Select - transform
+        var squares = numbers.Select(n => n * n);
+        Console.WriteLine($"Squares: {string.Join(", ", squares)}");
         
-        for (int i = 0; i < 5; i++)
-        {
-            int captured = i;  // Capture loop variable
-            functions.Add(() => captured * captured);
-        }
+        // OrderBy / OrderByDescending
+        var shuffled = new List<int> { 5, 2, 8, 1, 9, 3 };
+        var sorted = shuffled.OrderBy(n => n);
+        var descending = shuffled.OrderByDescending(n => n);
+        Console.WriteLine($"Sorted: {string.Join(", ", sorted)}");
+        Console.WriteLine($"Descending: {string.Join(", ", descending)}");
         
-        Console.WriteLine("\\nCaptured values:");
-        for (int i = 0; i < functions.Count; i++)
-        {
-            Console.WriteLine($"{i}: {functions[i]()}");
-        }
+        // First, Last, Single
+        var first = numbers.First(n => n > 5);
+        var last = numbers.Last(n => n < 5);
+        Console.WriteLine($"First > 5: {first}");
+        Console.WriteLine($"Last < 5: {last}");
         
-        // Closure with multiple variables
-        int x = 5, y = 10;
-        Func<int> calculate = () => x + y * 2;
-        Console.WriteLine($"\\nCalculation: {calculate()}");
+        // Any, All
+        bool hasEven = numbers.Any(n => n % 2 == 0);
+        bool allPositive = numbers.All(n => n > 0);
+        Console.WriteLine($"Has even: {hasEven}");
+        Console.WriteLine($"All positive: {allPositive}");
+        
+        // Count, Sum, Average
+        int evenCount = numbers.Count(n => n % 2 == 0);
+        int sum = numbers.Where(n => n % 2 == 0).Sum();
+        double avg = numbers.Average();
+        Console.WriteLine($"Even count: {evenCount}");
+        Console.WriteLine($"Sum of evens: {sum}");
+        Console.WriteLine($"Average: {avg}");
     }
 }`}
-  title="Closures"
 />
 
-## Lambdas as Event Handlers
+## Lambda with Objects
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
+using System.Linq;
+using System.Collections.Generic;
+
+class Person
+{
+    public string Name { get; set; }
+    public int Age { get; set; }
+    public string City { get; set; }
+}
+
+class Program
+{
+    static void Main()
+    {
+        var people = new List<Person>
+        {
+            new Person { Name = "Alice", Age = 25, City = "NYC" },
+            new Person { Name = "Bob", Age = 35, City = "LA" },
+            new Person { Name = "Charlie", Age = 28, City = "NYC" },
+            new Person { Name = "Diana", Age = 42, City = "Chicago" },
+            new Person { Name = "Eve", Age = 31, City = "LA" }
+        };
+        
+        // Filter by property
+        Console.WriteLine("=== People from NYC ===");
+        var fromNYC = people.Where(p => p.City == "NYC");
+        foreach (var p in fromNYC)
+        {
+            Console.WriteLine($"  {p.Name}, {p.Age}");
+        }
+        
+        // Order by property
+        Console.WriteLine("\\n=== Ordered by Age ===");
+        var byAge = people.OrderBy(p => p.Age);
+        foreach (var p in byAge)
+        {
+            Console.WriteLine($"  {p.Name}: {p.Age}");
+        }
+        
+        // Select specific property
+        Console.WriteLine("\\n=== Just Names ===");
+        var names = people.Select(p => p.Name);
+        Console.WriteLine($"  {string.Join(", ", names)}");
+        
+        // Transform to new object
+        Console.WriteLine("\\n=== Name and City ===");
+        var summaries = people.Select(p => new { p.Name, p.City });
+        foreach (var s in summaries)
+        {
+            Console.WriteLine($"  {s.Name} lives in {s.City}");
+        }
+        
+        // Group by
+        Console.WriteLine("\\n=== Grouped by City ===");
+        var byCity = people.GroupBy(p => p.City);
+        foreach (var group in byCity)
+        {
+            Console.WriteLine($"  {group.Key}: {string.Join(", ", group.Select(p => p.Name))}");
+        }
+        
+        // Aggregate
+        var oldest = people.OrderByDescending(p => p.Age).First();
+        var avgAge = people.Average(p => p.Age);
+        Console.WriteLine($"\\nOldest: {oldest.Name} ({oldest.Age})");
+        Console.WriteLine($"Average age: {avgAge:F1}");
+    }
+}`}
+/>
+
+## Closures - Capturing Variables
+
+<CodeEditor 
+  initialCode={`using System;
+using System.Collections.Generic;
+
+class Program
+{
+    static void Main()
+    {
+        // Lambda captures external variable
+        int multiplier = 3;
+        Func<int, int> multiply = x => x * multiplier;
+        
+        Console.WriteLine($"5 * {multiplier} = {multiply(5)}");
+        
+        // Change the captured variable
+        multiplier = 10;
+        Console.WriteLine($"5 * {multiplier} = {multiply(5)}");  // Uses new value!
+        
+        // Creating lambdas in a loop - common pitfall
+        Console.WriteLine("\\n=== Loop Capture (Wrong) ===");
+        var funcsWrong = new List<Func<int>>();
+        for (int i = 0; i < 3; i++)
+        {
+            funcsWrong.Add(() => i);  // All capture the same 'i'
+        }
+        foreach (var f in funcsWrong)
+        {
+            Console.WriteLine(f());  // All print 3!
+        }
+        
+        // Correct way - capture loop variable by value
+        Console.WriteLine("\\n=== Loop Capture (Correct) ===");
+        var funcsRight = new List<Func<int>>();
+        for (int i = 0; i < 3; i++)
+        {
+            int captured = i;  // Create a copy
+            funcsRight.Add(() => captured);
+        }
+        foreach (var f in funcsRight)
+        {
+            Console.WriteLine(f());  // Prints 0, 1, 2
+        }
+        
+        // Counter using closure
+        Console.WriteLine("\\n=== Counter with Closure ===");
+        var counter = CreateCounter();
+        Console.WriteLine(counter());  // 1
+        Console.WriteLine(counter());  // 2
+        Console.WriteLine(counter());  // 3
+    }
+    
+    static Func<int> CreateCounter()
+    {
+        int count = 0;
+        return () => ++count;  // Captures 'count'
+    }
+}`}
+/>
+
+## Lambda in Event Handlers
+
+<CodeEditor 
+  initialCode={`using System;
 
 class Button
 {
-    public event EventHandler Clicked;
     public string Name { get; set; }
+    public event EventHandler Clicked;
     
     public void Click()
     {
-        Console.WriteLine($"{Name} clicked");
         Clicked?.Invoke(this, EventArgs.Empty);
     }
 }
@@ -161,8 +307,9 @@ class Program
 {
     static void Main()
     {
-        Button button1 = new Button { Name = "Submit" };
-        Button button2 = new Button { Name = "Cancel" };
+        var button1 = new Button { Name = "Submit" };
+        var button2 = new Button { Name = "Cancel" };
+        var button3 = new Button { Name = "Delete" };
         
         int clickCount = 0;
         
@@ -170,170 +317,227 @@ class Program
         button1.Clicked += (sender, e) =>
         {
             clickCount++;
-            Console.WriteLine($"Submit handler executed (click #{clickCount})");
+            Button btn = (Button)sender;
+            Console.WriteLine($"{btn.Name} clicked! (Total clicks: {clickCount})");
         };
         
         button2.Clicked += (sender, e) =>
         {
-            Console.WriteLine("Cancel handler executed");
-            Console.WriteLine($"Total clicks so far: {clickCount}");
+            Console.WriteLine("Operation cancelled");
         };
         
-        // Trigger events
+        button3.Clicked += (sender, e) =>
+        {
+            Console.WriteLine("Are you sure you want to delete?");
+        };
+        
+        // Simulate clicks
         button1.Click();
         button1.Click();
         button2.Click();
+        button3.Click();
         button1.Click();
     }
 }`}
-  title="Lambda Event Handlers"
 />
 
-## Action and Func Delegates
+## Higher-Order Functions
+
+Functions that take or return other functions:
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 using System.Collections.Generic;
 
 class Program
 {
     static void Main()
     {
-        // Action - no return value
-        Action<string> print = message => Console.WriteLine(message);
-        print("Hello from Action!");
+        var numbers = new List<int> { 1, 2, 3, 4, 5 };
         
-        Action<string, int> printMultiple = (msg, times) =>
+        // ForEach with lambda
+        Console.WriteLine("=== ForEach ===");
+        numbers.ForEach(n => Console.Write($"{n} "));
+        Console.WriteLine();
+        
+        // Custom Map function
+        Console.WriteLine("\\n=== Custom Map ===");
+        var doubled = Map(numbers, n => n * 2);
+        Console.WriteLine($"Doubled: {string.Join(", ", doubled)}");
+        
+        // Custom Filter function
+        Console.WriteLine("\\n=== Custom Filter ===");
+        var evens = Filter(numbers, n => n % 2 == 0);
+        Console.WriteLine($"Evens: {string.Join(", ", evens)}");
+        
+        // Custom Reduce function
+        Console.WriteLine("\\n=== Custom Reduce ===");
+        var sum = Reduce(numbers, 0, (acc, n) => acc + n);
+        var product = Reduce(numbers, 1, (acc, n) => acc * n);
+        Console.WriteLine($"Sum: {sum}");
+        Console.WriteLine($"Product: {product}");
+        
+        // Function composition
+        Console.WriteLine("\\n=== Function Composition ===");
+        Func<int, int> addOne = x => x + 1;
+        Func<int, int> double_ = x => x * 2;
+        Func<int, int> square = x => x * x;
+        
+        var composed = Compose(addOne, Compose(double_, square));
+        Console.WriteLine($"(5^2 * 2) + 1 = {composed(5)}");
+    }
+    
+    // Higher-order function: Map
+    static List<T> Map<T>(List<T> list, Func<T, T> transform)
+    {
+        var result = new List<T>();
+        foreach (var item in list)
         {
-            for (int i = 0; i < times; i++)
-                Console.WriteLine($"{i + 1}. {msg}");
-        };
-        printMultiple("Repeated", 3);
-        
-        // Func - has return value
-        Func<int, int, int> add = (a, b) => a + b;
-        Func<int, int, int> multiply = (a, b) => a * b;
-        
-        Console.WriteLine($"\\n5 + 3 = {add(5, 3)}");
-        Console.WriteLine($"5 * 3 = {multiply(5, 3)}");
-        
-        // Func with complex return type
-        Func<string, int, string> repeat = (str, count) => 
+            result.Add(transform(item));
+        }
+        return result;
+    }
+    
+    // Higher-order function: Filter
+    static List<T> Filter<T>(List<T> list, Func<T, bool> predicate)
+    {
+        var result = new List<T>();
+        foreach (var item in list)
         {
-            string result = "";
-            for (int i = 0; i < count; i++)
-                result += str;
-            return result;
-        };
-        
-        Console.WriteLine($"\\nRepeated: {repeat("Ha", 5)}");
-        
-        // Predicate - returns bool
-        Predicate<int> isEven = n => n % 2 == 0;
-        Console.WriteLine($"\\nIs 4 even? {isEven(4)}");
-        Console.WriteLine($"Is 7 even? {isEven(7)}");
+            if (predicate(item))
+            {
+                result.Add(item);
+            }
+        }
+        return result;
+    }
+    
+    // Higher-order function: Reduce
+    static T Reduce<T>(List<T> list, T initial, Func<T, T, T> accumulator)
+    {
+        T result = initial;
+        foreach (var item in list)
+        {
+            result = accumulator(result, item);
+        }
+        return result;
+    }
+    
+    // Function composition
+    static Func<T, T> Compose<T>(Func<T, T> f, Func<T, T> g)
+    {
+        return x => f(g(x));
     }
 }`}
-  title="Action, Func, and Predicate"
 />
 
-## Real-World Example: Data Processing
+## Complete Example: Data Pipeline
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
-using System.Collections.Generic;
+  initialCode={`using System;
 using System.Linq;
+using System.Collections.Generic;
 
-class Product
+class Order
 {
-    public string Name { get; set; }
-    public decimal Price { get; set; }
-    public string Category { get; set; }
-    public int Stock { get; set; }
-    
-    public override string ToString() => 
-        $"{Name} (\${Price}) - Stock: {Stock}";
+    public int Id { get; set; }
+    public string Customer { get; set; }
+    public decimal Total { get; set; }
+    public string Status { get; set; }
+    public DateTime Date { get; set; }
 }
 
 class Program
 {
     static void Main()
     {
-        List<Product> products = new List<Product>
+        var orders = new List<Order>
         {
-            new Product { Name = "Laptop", Price = 999, Category = "Electronics", Stock = 5 },
-            new Product { Name = "Mouse", Price = 25, Category = "Electronics", Stock = 50 },
-            new Product { Name = "Desk", Price = 299, Category = "Furniture", Stock = 10 },
-            new Product { Name = "Chair", Price = 199, Category = "Furniture", Stock = 15 },
-            new Product { Name = "Monitor", Price = 399, Category = "Electronics", Stock = 8 }
+            new Order { Id = 1, Customer = "Alice", Total = 150, Status = "Shipped", Date = DateTime.Now.AddDays(-5) },
+            new Order { Id = 2, Customer = "Bob", Total = 89, Status = "Pending", Date = DateTime.Now.AddDays(-2) },
+            new Order { Id = 3, Customer = "Alice", Total = 250, Status = "Shipped", Date = DateTime.Now.AddDays(-10) },
+            new Order { Id = 4, Customer = "Charlie", Total = 175, Status = "Cancelled", Date = DateTime.Now.AddDays(-1) },
+            new Order { Id = 5, Customer = "Bob", Total = 320, Status = "Shipped", Date = DateTime.Now.AddDays(-7) },
+            new Order { Id = 6, Customer = "Diana", Total = 95, Status = "Pending", Date = DateTime.Now.AddDays(-3) }
         };
         
-        // Filter expensive products
-        var expensive = products.Where(p => p.Price > 300);
-        Console.WriteLine("Expensive products:");
-        foreach (var p in expensive)
-            Console.WriteLine($"  {p}");
+        Console.WriteLine("=== All Orders ===");
+        orders.ForEach(o => Console.WriteLine($"  #{o.Id} {o.Customer}: \\${'{'}o.Total{'}'} ({o.Status})"));
         
-        // Group by category
-        var byCategory = products.GroupBy(p => p.Category);
-        Console.WriteLine("\\nBy category:");
-        foreach (var group in byCategory)
+        // Pipeline: Filter -> Sort -> Transform -> Take
+        Console.WriteLine("\\n=== Top 3 Shipped Orders (by Total) ===");
+        var topShipped = orders
+            .Where(o => o.Status == "Shipped")
+            .OrderByDescending(o => o.Total)
+            .Take(3)
+            .Select(o => new { o.Customer, o.Total });
+        
+        foreach (var o in topShipped)
         {
-            Console.WriteLine($"  {group.Key}:");
-            foreach (var p in group)
-                Console.WriteLine($"    - {p.Name}");
+            Console.WriteLine($"  {o.Customer}: \\${'{'}o.Total{'}'}");
         }
         
-        // Calculate total inventory value
-        var totalValue = products.Sum(p => p.Price * p.Stock);
-        Console.WriteLine($"\\nTotal inventory value: \${totalValue}");
+        // Aggregation
+        Console.WriteLine("\\n=== Sales Summary ===");
+        var shippedOrders = orders.Where(o => o.Status == "Shipped");
+        Console.WriteLine($"  Shipped orders: {shippedOrders.Count()}");
+        Console.WriteLine($"  Total revenue: \\${'{'}shippedOrders.Sum(o => o.Total){'}'}");
+        Console.WriteLine($"  Average order: \\${'{'}shippedOrders.Average(o => o.Total):F2{'}'}");
         
-        // Apply discount
-        Action<Product, decimal> applyDiscount = (product, percent) =>
+        // Group and aggregate
+        Console.WriteLine("\\n=== Revenue by Customer ===");
+        var byCustomer = orders
+            .Where(o => o.Status == "Shipped")
+            .GroupBy(o => o.Customer)
+            .Select(g => new 
+            { 
+                Customer = g.Key, 
+                Total = g.Sum(o => o.Total),
+                Count = g.Count()
+            })
+            .OrderByDescending(x => x.Total);
+        
+        foreach (var c in byCustomer)
         {
-            product.Price *= (1 - percent / 100);
-            Console.WriteLine($"Applied {percent}% discount to {product.Name}");
-        };
+            Console.WriteLine($"  {c.Customer}: \\${'{'}c.Total{'}'} ({c.Count} orders)");
+        }
         
-        Console.WriteLine("\\nApplying 10% discount to electronics:");
-        products
-            .Where(p => p.Category == "Electronics")
-            .ToList()
-            .ForEach(p => applyDiscount(p, 10));
+        // Find with lambda
+        Console.WriteLine("\\n=== Order Lookup ===");
+        var bigOrders = orders.FindAll(o => o.Total > 200);
+        Console.WriteLine($"Orders over \\$200: {string.Join(", ", bigOrders.Select(o => $"#{o.Id}"))}");
         
-        // Find low stock items
-        var lowStock = products
-            .Where(p => p.Stock < 10)
-            .OrderBy(p => p.Stock);
-        
-        Console.WriteLine("\\nLow stock alert:");
-        foreach (var p in lowStock)
-            Console.WriteLine($"  ⚠️  {p}");
+        var bobOrder = orders.Find(o => o.Customer == "Bob" && o.Status == "Shipped");
+        Console.WriteLine($"Bob's shipped order: #{bobOrder?.Id}");
     }
 }`}
-  title="Data Processing with Lambdas"
 />
-
-## Best Practices
-
-1. **Keep lambdas short** - Prefer methods for complex logic
-2. **Use meaningful names** - Even for single parameters
-3. **Be careful with closures** - Understand variable capture
-4. **Prefer expression lambdas** - More concise when possible
-5. **Use Action/Func** - Instead of custom delegates
-6. **Consider readability** - Sometimes named methods are clearer
 
 ## Key Takeaways
 
-- **Lambda expressions** are concise anonymous methods
-- Syntax: `(parameters) => expression` or `(parameters) => { statements }`
-- **Closures** capture variables from outer scope
-- Essential for **LINQ**, **events**, and **functional programming**
-- **Action** (void), **Func** (returns value), **Predicate** (returns bool)
-- Make code more **expressive** and **concise**
+- **Lambda expressions** are anonymous inline functions
+- Use `=>` operator (expression lambda) or `=> { }` (statement lambda)
+- Essential for **LINQ**, **events**, and **callbacks**
+- Lambdas can **capture variables** from outer scope (closures)
+- Use **Action** for void, **Func** for return values, **Predicate** for bool
 
-## Next Steps
+## Lambda Syntax Cheat Sheet
 
-Next: **LINQ Basics** - query and transform collections with ease!
+| Syntax | Description | Example |
+|--------|-------------|---------|
+| `x => expression` | Single param, expression | `x => x * 2` |
+| `(x, y) => expression` | Multiple params | `(a, b) => a + b` |
+| `() => expression` | No params | `() => DateTime.Now` |
+| `x => { statements }` | Statement body | `x => { return x * 2; }` |
+
+## Best Practices
+
+1. **Keep lambdas short** - extract complex logic to named methods
+2. **Use meaningful parameter names** for complex lambdas
+3. **Be careful with closures** - they capture by reference
+4. **Prefer expression lambdas** when possible for readability
+5. **Use method groups** when lambda just calls a method
+
+## Next Module
+
+You've completed Delegates & Events! Continue to **LINQ** for powerful data querying!
