--- a/content/lessons/05-linq/01-linq-basics.mdx
+++ b/content/lessons/05-linq/01-linq-basics.mdx
@@ -1,29 +1,24 @@
 ---
 title: "LINQ Basics"
-description: "Master Language Integrated Query for powerful data manipulation"
+description: "Learn the fundamentals of Language Integrated Query (LINQ)"
 order: 1
 difficulty: "intermediate"
-tags: ["linq", "queries", "collections", "functional"]
-duration: "35 minutes"
+tags: ["linq", "query", "data manipulation", "collections"]
+duration: "30 minutes"
 ---
 
 # LINQ Basics
 
-LINQ (Language Integrated Query) provides a unified syntax for querying different data sources. It makes working with collections intuitive and powerful.
+LINQ (Language Integrated Query) is a powerful feature that adds query capabilities directly into C#. It provides a consistent way to query data from various sources.
 
 ## What is LINQ?
 
-LINQ enables you to:
-- **Query collections** with SQL-like syntax
-- **Filter, transform, and aggregate** data
-- Work with **any collection type**
-- Write **declarative** instead of imperative code
+LINQ allows you to write queries against collections, databases, XML, and more using a unified syntax. It makes data manipulation expressive and readable.
 
-## Query Syntax vs Method Syntax
+## Getting Started with LINQ
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 using System.Linq;
 using System.Collections.Generic;
 
@@ -31,45 +26,32 @@ class Program
 {
     static void Main()
     {
-        List<int> numbers = new List<int> { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
+        var numbers = new List<int> { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
         
-        // Query syntax (SQL-like)
-        var queryEven = from n in numbers
-                        where n % 2 == 0
-                        select n;
-        
-        Console.WriteLine("Query syntax evens: " + string.Join(", ", queryEven));
+        Console.WriteLine($"Original: {string.Join(", ", numbers)}");
         
         // Method syntax (fluent)
-        var methodEven = numbers.Where(n => n % 2 == 0);
+        var evenNumbers = numbers.Where(n => n % 2 == 0);
+        Console.WriteLine($"Evens (method): {string.Join(", ", evenNumbers)}");
         
-        Console.WriteLine("Method syntax evens: " + string.Join(", ", methodEven));
+        // Query syntax (SQL-like)
+        var evenQuery = from n in numbers
+                        where n % 2 == 0
+                        select n;
+        Console.WriteLine($"Evens (query): {string.Join(", ", evenQuery)}");
         
-        // Complex query syntax
-        var queryComplex = from n in numbers
-                          where n > 3
-                          orderby n descending
-                          select n * n;
-        
-        Console.WriteLine("\\nComplex query: " + string.Join(", ", queryComplex));
-        
-        // Equivalent method syntax
-        var methodComplex = numbers
-            .Where(n => n > 3)
-            .OrderByDescending(n => n)
-            .Select(n => n * n);
-        
-        Console.WriteLine("Complex method: " + string.Join(", ", methodComplex));
+        // Both produce the same result!
+        // Method syntax is more common in practice
     }
 }`}
-  title="Query vs Method Syntax"
 />
 
-## Where - Filtering
+## Basic LINQ Operations
+
+### Where - Filtering
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 using System.Linq;
 using System.Collections.Generic;
 
@@ -77,41 +59,36 @@ class Program
 {
     static void Main()
     {
-        List<int> numbers = new List<int> { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
+        var numbers = Enumerable.Range(1, 20).ToList();
         
-        // Simple filter
+        Console.WriteLine($"All: {string.Join(", ", numbers)}");
+        
+        // Single condition
         var evens = numbers.Where(n => n % 2 == 0);
-        Console.WriteLine("Evens: " + string.Join(", ", evens));
+        Console.WriteLine($"Evens: {string.Join(", ", evens)}");
         
         // Multiple conditions
-        var filtered = numbers.Where(n => n > 3 && n < 8);
-        Console.WriteLine("Between 3 and 8: " + string.Join(", ", filtered));
+        var evenAndBigger = numbers.Where(n => n % 2 == 0 && n > 10);
+        Console.WriteLine($"Even and > 10: {string.Join(", ", evenAndBigger)}");
         
-        // Complex condition
-        var complex = numbers.Where(n => n % 2 == 0 || n > 7);
-        Console.WriteLine("Even or > 7: " + string.Join(", ", complex));
+        // With index
+        var evenIndex = numbers.Where((n, index) => index % 2 == 0);
+        Console.WriteLine($"Even index: {string.Join(", ", evenIndex)}");
         
-        // With strings
-        List<string> names = new List<string> 
-        { 
-            "Alice", "Bob", "Charlie", "David", "Eve" 
-        };
-        
-        var longNames = names.Where(name => name.Length > 4);
-        Console.WriteLine("\\nLong names: " + string.Join(", ", longNames));
-        
-        var startsWithC = names.Where(name => name.StartsWith("C"));
-        Console.WriteLine("Starts with C: " + string.Join(", ", startsWithC));
+        // Chained Where (AND logic)
+        var filtered = numbers
+            .Where(n => n > 5)
+            .Where(n => n < 15)
+            .Where(n => n % 3 == 0);
+        Console.WriteLine($"5 < n < 15, div by 3: {string.Join(", ", filtered)}");
     }
 }`}
-  title="Where - Filtering"
 />
 
-## Select - Transformation
+### Select - Transforming
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 using System.Linq;
 using System.Collections.Generic;
 
@@ -119,45 +96,38 @@ class Program
 {
     static void Main()
     {
-        List<int> numbers = new List<int> { 1, 2, 3, 4, 5 };
+        var numbers = new List<int> { 1, 2, 3, 4, 5 };
         
         // Simple transformation
-        var squares = numbers.Select(n => n * n);
-        Console.WriteLine("Squares: " + string.Join(", ", squares));
+        var doubled = numbers.Select(n => n * 2);
+        Console.WriteLine($"Doubled: {string.Join(", ", doubled)}");
+        
+        var squared = numbers.Select(n => n * n);
+        Console.WriteLine($"Squared: {string.Join(", ", squared)}");
         
         // Transform to different type
-        var strings = numbers.Select(n => $"Number {n}");
-        foreach (var s in strings)
-            Console.WriteLine(s);
+        var asStrings = numbers.Select(n => $"Number: {n}");
+        Console.WriteLine($"Strings: {string.Join(", ", asStrings)}");
         
-        // Transform to anonymous type
-        var transformed = numbers.Select(n => new
-        {
-            Original = n,
-            Square = n * n,
-            Cube = n * n * n
-        });
+        // Select with index
+        var withIndex = numbers.Select((n, i) => $"[{i}]={n}");
+        Console.WriteLine($"With index: {string.Join(", ", withIndex)}");
         
-        Console.WriteLine("\\nTransformed:");
-        foreach (var item in transformed)
+        // Select to anonymous type
+        var objects = numbers.Select(n => new { Value = n, Square = n * n, IsEven = n % 2 == 0 });
+        Console.WriteLine("\\nAs objects:");
+        foreach (var obj in objects)
         {
-            Console.WriteLine($"  {item.Original} -> Square: {item.Square}, Cube: {item.Cube}");
+            Console.WriteLine($"  {obj.Value}: square={obj.Square}, even={obj.IsEven}");
         }
-        
-        // Transform strings
-        List<string> names = new List<string> { "alice", "bob", "charlie" };
-        var upper = names.Select(n => n.ToUpper());
-        Console.WriteLine("\\nUppercase: " + string.Join(", ", upper));
     }
 }`}
-  title="Select - Transformation"
 />
 
-## OrderBy - Sorting
+### OrderBy / OrderByDescending - Sorting
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 using System.Linq;
 using System.Collections.Generic;
 
@@ -166,54 +136,60 @@ class Person
     public string Name { get; set; }
     public int Age { get; set; }
     public string City { get; set; }
-    
-    public override string ToString() => $"{Name} ({Age}) from {City}";
 }
 
 class Program
 {
     static void Main()
     {
-        List<int> numbers = new List<int> { 5, 2, 8, 1, 9, 3 };
+        var numbers = new List<int> { 5, 2, 8, 1, 9, 3, 7 };
         
-        // Ascending
+        // Simple sorting
         var ascending = numbers.OrderBy(n => n);
-        Console.WriteLine("Ascending: " + string.Join(", ", ascending));
+        Console.WriteLine($"Ascending: {string.Join(", ", ascending)}");
         
-        // Descending
         var descending = numbers.OrderByDescending(n => n);
-        Console.WriteLine("Descending: " + string.Join(", ", descending));
+        Console.WriteLine($"Descending: {string.Join(", ", descending)}");
         
-        // Complex objects
-        List<Person> people = new List<Person>
+        // Sorting objects
+        var people = new List<Person>
         {
-            new Person { Name = "Alice", Age = 30, City = "New York" },
-            new Person { Name = "Bob", Age = 25, City = "Boston" },
-            new Person { Name = "Charlie", Age = 35, City = "Chicago" },
-            new Person { Name = "David", Age = 25, City = "Austin" }
+            new Person { Name = "Charlie", Age = 35, City = "NYC" },
+            new Person { Name = "Alice", Age = 25, City = "LA" },
+            new Person { Name = "Bob", Age = 30, City = "NYC" },
+            new Person { Name = "Diana", Age = 25, City = "Chicago" }
         };
         
-        // Sort by age
-        var byAge = people.OrderBy(p => p.Age);
-        Console.WriteLine("\\nBy age:");
-        foreach (var p in byAge)
-            Console.WriteLine($"  {p}");
+        Console.WriteLine("\\nBy Name:");
+        foreach (var p in people.OrderBy(p => p.Name))
+        {
+            Console.WriteLine($"  {p.Name}");
+        }
         
-        // Sort by multiple criteria
-        var multiSort = people.OrderBy(p => p.Age).ThenBy(p => p.Name);
-        Console.WriteLine("\\nBy age, then name:");
-        foreach (var p in multiSort)
-            Console.WriteLine($"  {p}");
+        Console.WriteLine("\\nBy Age (descending):");
+        foreach (var p in people.OrderByDescending(p => p.Age))
+        {
+            Console.WriteLine($"  {p.Name}: {p.Age}");
+        }
+        
+        // Multiple sort criteria with ThenBy
+        Console.WriteLine("\\nBy Age, then by Name:");
+        var sorted = people
+            .OrderBy(p => p.Age)
+            .ThenBy(p => p.Name);
+        
+        foreach (var p in sorted)
+        {
+            Console.WriteLine($"  {p.Name}: {p.Age}");
+        }
     }
 }`}
-  title="OrderBy - Sorting"
 />
 
-## First, FirstOrDefault, Single
+### First, Last, Single
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 using System.Linq;
 using System.Collections.Generic;
 
@@ -221,52 +197,45 @@ class Program
 {
     static void Main()
     {
-        List<int> numbers = new List<int> { 1, 2, 3, 4, 5 };
-        List<int> empty = new List<int>();
+        var numbers = new List<int> { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
         
-        // First - throws if empty
+        // First - get first element
         var first = numbers.First();
-        Console.WriteLine($"First: {first}");
-        
-        // First with condition
         var firstEven = numbers.First(n => n % 2 == 0);
+        Console.WriteLine($"First: {first}");
         Console.WriteLine($"First even: {firstEven}");
         
-        // FirstOrDefault - returns default if empty/not found
-        var firstOrDefault = empty.FirstOrDefault();
+        // Last - get last element
+        var last = numbers.Last();
+        var lastEven = numbers.Last(n => n % 2 == 0);
+        Console.WriteLine($"Last: {last}");
+        Console.WriteLine($"Last even: {lastEven}");
+        
+        // Single - expects exactly one match
+        var theFive = numbers.Single(n => n == 5);
+        Console.WriteLine($"The five: {theFive}");
+        
+        // OrDefault variants - return default if not found
+        var empty = new List<int>();
+        var firstOrDefault = empty.FirstOrDefault();  // Returns 0
         Console.WriteLine($"FirstOrDefault on empty: {firstOrDefault}");
         
-        var firstLarge = numbers.FirstOrDefault(n => n > 10);
-        Console.WriteLine($"First > 10: {firstLarge} (not found)");
+        var notFound = numbers.FirstOrDefault(n => n > 100);
+        Console.WriteLine($"First > 100: {notFound}");  // Returns 0
         
-        // Last and LastOrDefault
-        var last = numbers.Last();
-        var lastOdd = numbers.Last(n => n % 2 == 1);
-        Console.WriteLine($"\\nLast: {last}");
-        Console.WriteLine($"Last odd: {lastOdd}");
+        var singleOrDefault = numbers.SingleOrDefault(n => n > 100);
+        Console.WriteLine($"Single > 100: {singleOrDefault}");  // Returns 0
         
-        // Single - exactly one element
-        List<int> single = new List<int> { 42 };
-        var singleValue = single.Single();
-        Console.WriteLine($"\\nSingle value: {singleValue}");
-        
-        // Single with condition
-        var singleFive = numbers.Single(n => n == 5);
-        Console.WriteLine($"Single 5: {singleFive}");
-        
-        // ElementAt - by index
-        var third = numbers.ElementAt(2);  // 0-based
-        Console.WriteLine($"\\nThird element: {third}");
+        // With custom default (C# 9+)
+        // var result = numbers.FirstOrDefault(n => n > 100, -1);
     }
 }`}
-  title="First, Last, Single"
 />
 
-## Any and All
+### Take and Skip
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 using System.Linq;
 using System.Collections.Generic;
 
@@ -274,50 +243,47 @@ class Program
 {
     static void Main()
     {
-        List<int> numbers = new List<int> { 1, 2, 3, 4, 5 };
-        List<int> empty = new List<int>();
+        var numbers = Enumerable.Range(1, 10).ToList();
+        Console.WriteLine($"All: {string.Join(", ", numbers)}");
         
-        // Any - check if any elements exist
-        bool hasElements = numbers.Any();
-        bool emptyHasElements = empty.Any();
-        Console.WriteLine($"Numbers has elements: {hasElements}");
-        Console.WriteLine($"Empty has elements: {emptyHasElements}");
+        // Take - get first N elements
+        var firstThree = numbers.Take(3);
+        Console.WriteLine($"Take 3: {string.Join(", ", firstThree)}");
         
-        // Any with condition
-        bool hasEvens = numbers.Any(n => n % 2 == 0);
-        bool hasLarge = numbers.Any(n => n > 10);
-        Console.WriteLine($"\\nHas evens: {hasEvens}");
-        Console.WriteLine($"Has > 10: {hasLarge}");
+        // Skip - skip first N elements
+        var skipThree = numbers.Skip(3);
+        Console.WriteLine($"Skip 3: {string.Join(", ", skipThree)}");
         
-        // All - check if all elements match
-        bool allPositive = numbers.All(n => n > 0);
-        bool allEven = numbers.All(n => n % 2 == 0);
-        Console.WriteLine($"\\nAll positive: {allPositive}");
-        Console.WriteLine($"All even: {allEven}");
+        // Pagination
+        int pageSize = 3;
+        int pageNumber = 2;  // 0-indexed
+        var page = numbers
+            .Skip(pageNumber * pageSize)
+            .Take(pageSize);
+        Console.WriteLine($"Page {pageNumber + 1}: {string.Join(", ", page)}");
         
-        // Practical example
-        List<string> words = new List<string> 
-        { 
-            "apple", "banana", "cherry" 
-        };
+        // TakeWhile - take while condition is true
+        var takeWhile = numbers.TakeWhile(n => n < 5);
+        Console.WriteLine($"TakeWhile < 5: {string.Join(", ", takeWhile)}");
         
-        bool anyLong = words.Any(w => w.Length > 6);
-        bool allStartsWithA = words.All(w => w.StartsWith("a"));
-        bool allLowerCase = words.All(w => w == w.ToLower());
+        // SkipWhile - skip while condition is true
+        var skipWhile = numbers.SkipWhile(n => n < 5);
+        Console.WriteLine($"SkipWhile < 5: {string.Join(", ", skipWhile)}");
         
-        Console.WriteLine($"\\nAny word > 6 chars: {anyLong}");
-        Console.WriteLine($"All start with 'a': {allStartsWithA}");
-        Console.WriteLine($"All lowercase: {allLowerCase}");
+        // TakeLast / SkipLast
+        var lastThree = numbers.TakeLast(3);
+        Console.WriteLine($"TakeLast 3: {string.Join(", ", lastThree)}");
+        
+        var skipLastThree = numbers.SkipLast(3);
+        Console.WriteLine($"SkipLast 3: {string.Join(", ", skipLastThree)}");
     }
 }`}
-  title="Any and All"
 />
 
-## Count, Sum, Average, Min, Max
+### Aggregation: Count, Sum, Average, Min, Max
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 using System.Linq;
 using System.Collections.Generic;
 
@@ -332,54 +298,51 @@ class Program
 {
     static void Main()
     {
-        List<int> numbers = new List<int> { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
+        var numbers = new List<int> { 5, 10, 15, 20, 25 };
         
-        // Basic aggregations
-        int count = numbers.Count();
-        int sum = numbers.Sum();
-        double average = numbers.Average();
-        int min = numbers.Min();
-        int max = numbers.Max();
+        Console.WriteLine("=== Number Aggregations ===");
+        Console.WriteLine($"Count: {numbers.Count}");
+        Console.WriteLine($"Sum: {numbers.Sum()}");
+        Console.WriteLine($"Average: {numbers.Average()}");
+        Console.WriteLine($"Min: {numbers.Min()}");
+        Console.WriteLine($"Max: {numbers.Max()}");
         
-        Console.WriteLine($"Count: {count}");
-        Console.WriteLine($"Sum: {sum}");
-        Console.WriteLine($"Average: {average}");
-        Console.WriteLine($"Min: {min}");
-        Console.WriteLine($"Max: {max}");
+        // With predicate
+        Console.WriteLine($"Count > 10: {numbers.Count(n => n > 10)}");
+        Console.WriteLine($"Sum of evens: {numbers.Where(n => n % 2 == 0).Sum()}");
         
-        // With conditions
-        int evenCount = numbers.Count(n => n % 2 == 0);
-        int sumLarge = numbers.Where(n => n > 5).Sum();
-        Console.WriteLine($"\\nEven count: {evenCount}");
-        Console.WriteLine($"Sum of numbers > 5: {sumLarge}");
-        
-        // With complex objects
-        List<Product> products = new List<Product>
+        var products = new List<Product>
         {
-            new Product { Name = "Laptop", Price = 999, Stock = 5 },
-            new Product { Name = "Mouse", Price = 25, Stock = 50 },
-            new Product { Name = "Keyboard", Price = 79, Stock = 30 }
+            new Product { Name = "Laptop", Price = 999.99m, Stock = 10 },
+            new Product { Name = "Mouse", Price = 29.99m, Stock = 50 },
+            new Product { Name = "Keyboard", Price = 79.99m, Stock = 30 },
+            new Product { Name = "Monitor", Price = 299.99m, Stock = 15 }
         };
         
-        decimal totalValue = products.Sum(p => p.Price * p.Stock);
-        decimal avgPrice = products.Average(p => p.Price);
-        decimal maxPrice = products.Max(p => p.Price);
-        int totalStock = products.Sum(p => p.Stock);
+        Console.WriteLine("\\n=== Product Aggregations ===");
+        Console.WriteLine($"Total products: {products.Count}");
+        Console.WriteLine($"Total stock: {products.Sum(p => p.Stock)}");
+        Console.WriteLine($"Average price: \\${'{'}products.Average(p => p.Price):F2{'}'}");
+        Console.WriteLine($"Cheapest: \\${'{'}products.Min(p => p.Price){'}'}");
+        Console.WriteLine($"Most expensive: \\${'{'}products.Max(p => p.Price){'}'}");
         
-        Console.WriteLine($"\\nTotal inventory value: \${totalValue}");
-        Console.WriteLine($"Average price: \${avgPrice:F2}");
-        Console.WriteLine($"Most expensive: \${maxPrice}");
-        Console.WriteLine($"Total stock: {totalStock} units");
+        // Find the actual object with min/max
+        var cheapest = products.OrderBy(p => p.Price).First();
+        var expensive = products.OrderByDescending(p => p.Price).First();
+        Console.WriteLine($"\\nCheapest product: {cheapest.Name} (\\${'{'}cheapest.Price{'}'})");
+        Console.WriteLine($"Most expensive: {expensive.Name} (\\${'{'}expensive.Price{'}'})");
+        
+        // Total inventory value
+        var totalValue = products.Sum(p => p.Price * p.Stock);
+        Console.WriteLine($"Total inventory value: \\${'{'}totalValue:F2{'}'}");
     }
 }`}
-  title="Aggregation Methods"
 />
 
-## Chaining Multiple Operations
+### Any and All
 
 <CodeEditor 
-  language="csharp"
-  code={`using System;
+  initialCode={`using System;
 using System.Linq;
 using System.Collections.Generic;
 
@@ -387,75 +350,186 @@ class Student
 {
     public string Name { get; set; }
     public int Age { get; set; }
-    public double GPA { get; set; }
-    public string Major { get; set; }
+    public List<int> Grades { get; set; }
 }
 
 class Program
 {
     static void Main()
     {
-        List<Student> students = new List<Student>
+        var numbers = new List<int> { 1, 2, 3, 4, 5 };
+        
+        // Any - checks if any element matches
+        Console.WriteLine("=== Any ===");
+        Console.WriteLine($"Any elements? {numbers.Any()}");
+        Console.WriteLine($"Any even? {numbers.Any(n => n % 2 == 0)}");
+        Console.WriteLine($"Any > 10? {numbers.Any(n => n > 10)}");
+        
+        // All - checks if all elements match
+        Console.WriteLine("\\n=== All ===");
+        Console.WriteLine($"All positive? {numbers.All(n => n > 0)}");
+        Console.WriteLine($"All < 10? {numbers.All(n => n < 10)}");
+        Console.WriteLine($"All even? {numbers.All(n => n % 2 == 0)}");
+        
+        // Practical example
+        var students = new List<Student>
         {
-            new Student { Name = "Alice", Age = 20, GPA = 3.8, Major = "CS" },
-            new Student { Name = "Bob", Age = 22, GPA = 3.2, Major = "Math" },
-            new Student { Name = "Charlie", Age = 19, GPA = 3.9, Major = "CS" },
-            new Student { Name = "David", Age = 21, GPA = 3.5, Major = "Physics" },
-            new Student { Name = "Eve", Age = 20, GPA = 3.7, Major = "CS" }
+            new Student { Name = "Alice", Age = 20, Grades = new List<int> { 85, 90, 88 } },
+            new Student { Name = "Bob", Age = 22, Grades = new List<int> { 70, 75, 68 } },
+            new Student { Name = "Charlie", Age = 19, Grades = new List<int> { 95, 92, 98 } }
         };
         
-        // Complex query chain
-        var result = students
-            .Where(s => s.Major == "CS")
-            .Where(s => s.GPA > 3.5)
-            .OrderByDescending(s => s.GPA)
-            .ThenBy(s => s.Name)
-            .Select(s => new
-            {
-                s.Name,
-                s.GPA,
-                Standing = s.GPA >= 3.8 ? "Excellent" : "Good"
-            });
+        Console.WriteLine("\\n=== Student Checks ===");
         
-        Console.WriteLine("Top CS students:");
-        foreach (var s in result)
-        {
-            Console.WriteLine($"  {s.Name}: GPA {s.GPA} - {s.Standing}");
-        }
+        // Any student with perfect score?
+        bool hasPerfectScore = students.Any(s => s.Grades.Any(g => g == 100));
+        Console.WriteLine($"Any perfect score? {hasPerfectScore}");
         
-        // Statistics
-        var csStudents = students.Where(s => s.Major == "CS");
-        double avgGPA = csStudents.Average(s => s.GPA);
-        double maxGPA = csStudents.Max(s => s.GPA);
-        int count = csStudents.Count();
+        // All students passing (average >= 70)?
+        bool allPassing = students.All(s => s.Grades.Average() >= 70);
+        Console.WriteLine($"All students passing? {allPassing}");
         
-        Console.WriteLine($"\\nCS Statistics:");
-        Console.WriteLine($"  Count: {count}");
-        Console.WriteLine($"  Avg GPA: \${avgGPA:F2}");
-        Console.WriteLine($"  Max GPA: {maxGPA}");
+        // Any adult students?
+        bool hasAdults = students.Any(s => s.Age >= 18);
+        Console.WriteLine($"Any adults? {hasAdults}");
+        
+        // All grades above 60?
+        bool allGradesAbove60 = students.All(s => s.Grades.All(g => g > 60));
+        Console.WriteLine($"All grades above 60? {allGradesAbove60}");
     }
 }`}
-  title="Chaining Operations"
 />
 
-## Best Practices
+### Distinct and ToList/ToArray
 
-1. **Use method syntax** - More flexible and composable
-2. **Chain operations** - Build complex queries step by step
-3. **Deferred execution** - Queries execute when iterated
-4. **Use ToList()/ToArray()** - When you need immediate execution
-5. **Keep it readable** - Break into multiple lines
-6. **Consider performance** - Don't over-query
+<CodeEditor 
+  initialCode={`using System;
+using System.Linq;
+using System.Collections.Generic;
+
+class Program
+{
+    static void Main()
+    {
+        var numbers = new List<int> { 1, 2, 2, 3, 3, 3, 4, 4, 5 };
+        
+        Console.WriteLine($"Original: {string.Join(", ", numbers)}");
+        
+        // Distinct - remove duplicates
+        var unique = numbers.Distinct();
+        Console.WriteLine($"Distinct: {string.Join(", ", unique)}");
+        
+        // LINQ queries are lazy - they don't execute until enumerated
+        // Use ToList() or ToArray() to materialize
+        var list = numbers.Where(n => n > 2).ToList();
+        var array = numbers.Where(n => n > 2).ToArray();
+        
+        Console.WriteLine($"\\nAs List: {string.Join(", ", list)} (Count: {list.Count})");
+        Console.WriteLine($"As Array: {string.Join(", ", array)} (Length: {array.Length})");
+        
+        // ToDictionary
+        var words = new List<string> { "apple", "banana", "cherry" };
+        var wordLengths = words.ToDictionary(w => w, w => w.Length);
+        
+        Console.WriteLine("\\nWord lengths:");
+        foreach (var kvp in wordLengths)
+        {
+            Console.WriteLine($"  {kvp.Key}: {kvp.Value}");
+        }
+        
+        // ToHashSet
+        var uniqueSet = numbers.ToHashSet();
+        Console.WriteLine($"\\nHashSet: {string.Join(", ", uniqueSet)}");
+    }
+}`}
+/>
+
+## Chaining Operations
+
+<CodeEditor 
+  initialCode={`using System;
+using System.Linq;
+using System.Collections.Generic;
+
+class Product
+{
+    public string Name { get; set; }
+    public string Category { get; set; }
+    public decimal Price { get; set; }
+    public int Stock { get; set; }
+}
+
+class Program
+{
+    static void Main()
+    {
+        var products = new List<Product>
+        {
+            new Product { Name = "Laptop", Category = "Electronics", Price = 999.99m, Stock = 10 },
+            new Product { Name = "Mouse", Category = "Electronics", Price = 29.99m, Stock = 50 },
+            new Product { Name = "Desk", Category = "Furniture", Price = 199.99m, Stock = 5 },
+            new Product { Name = "Chair", Category = "Furniture", Price = 149.99m, Stock = 8 },
+            new Product { Name = "Monitor", Category = "Electronics", Price = 299.99m, Stock = 0 },
+            new Product { Name = "Lamp", Category = "Furniture", Price = 49.99m, Stock = 20 }
+        };
+        
+        // Chain multiple operations
+        var result = products
+            .Where(p => p.Category == "Electronics")  // Filter by category
+            .Where(p => p.Stock > 0)                  // In stock only
+            .OrderByDescending(p => p.Price)          // Sort by price
+            .Take(3)                                  // Top 3
+            .Select(p => new { p.Name, p.Price });    // Project to simple object
+        
+        Console.WriteLine("Top 3 in-stock Electronics (by price):");
+        foreach (var item in result)
+        {
+            Console.WriteLine($"  {item.Name}: \\${'{'}item.Price{'}'}");
+        }
+        
+        // Another pipeline
+        var summary = products
+            .Where(p => p.Stock > 0)
+            .GroupBy(p => p.Category)
+            .Select(g => new
+            {
+                Category = g.Key,
+                Count = g.Count(),
+                TotalValue = g.Sum(p => p.Price * p.Stock),
+                AvgPrice = g.Average(p => p.Price)
+            })
+            .OrderByDescending(x => x.TotalValue);
+        
+        Console.WriteLine("\\nInventory Summary by Category:");
+        foreach (var cat in summary)
+        {
+            Console.WriteLine($"  {cat.Category}:");
+            Console.WriteLine($"    Products: {cat.Count}");
+            Console.WriteLine($"    Total Value: \\${'{'}cat.TotalValue:F2{'}'}");
+            Console.WriteLine($"    Avg Price: \\${'{'}cat.AvgPrice:F2{'}'}");
+        }
+    }
+}`}
+/>
 
 ## Key Takeaways
 
-- **LINQ** provides unified syntax for querying collections
-- **Method syntax** (`Where`, `Select`) vs **Query syntax** (`from...where`)
-- **Deferred execution** - queries run when enumerated
-- **Fluent API** allows chaining multiple operations
-- Essential methods: **Where**, **Select**, **OrderBy**, **First**, **Any**, **All**
-- Aggregations: **Count**, **Sum**, **Average**, **Min**, **Max**
+- **LINQ** provides a unified way to query any data source
+- **Method syntax** (fluent) and **query syntax** (SQL-like) are interchangeable
+- **Where** filters, **Select** transforms, **OrderBy** sorts
+- **First/Last/Single** get specific elements
+- **Take/Skip** for pagination
+- **Any/All** for boolean checks
+- Operations are **lazy** until materialized with ToList/ToArray
+
+## Best Practices
+
+1. **Prefer method syntax** for most cases
+2. **Chain operations** fluently for readability
+3. **Use ToList()** when you need to materialize results
+4. **Remember lazy evaluation** - queries execute when enumerated
+5. **Use meaningful names** for lambda parameters
 
 ## Next Steps
 
-Next: **Advanced LINQ** - GroupBy, Join, and complex queries!
+Next lesson: **Advanced LINQ** - Learn GroupBy, Join, and complex queries!
